--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -8,6 +8,9 @@ html
     link(rel="stylesheet", href="https://unpkg.com/filepond@^4/dist/filepond.css")
     link(rel="stylesheet", href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css")
     link(rel="stylesheet", href="/admin/assets/css/style.css")
+    //SweetAlert
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js")
+
     <script src="https://cdn.tiny.cloud/1/8zje3bu8nu2qkzxy3tq7srkvvsdjk221dm67lv15ipiti0eg/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
     script.
       const pathAdmin = "#{pathAdmin}";
@@ -33,4 +36,7 @@ html
     script(src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js") 
     script(src="https://unpkg.com/filepond@^4/dist/filepond.js")
     script(src="https://cdn.jsdelivr.net/npm/just-validate@4.3.0/dist/just-validate.production.min.js")
+    //- excel 
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js")
     script(src="/admin/assets/js/script.js")
