--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -35,7 +35,12 @@ block main
       .inner-item.inner-reset
         <i class="fa-solid fa-rotate-left" filter-reset></i> Xóa bộ lọc
   //- End Section 4
-
+  .section-5
+      .inner-wrap
+        .inner-button-create
+          button#exportExcel(type="button")
+            i.fa-solid.fa-file-excel(style="margin-right:10px; color:white; font-size:20px")
+            | Xuất Excel
   //- Section 5
   //- .section-5
   //-   .inner-wrap
