--- a/views/client/pages/bando-canhbao.pug
+++ b/views/client/pages/bando-canhbao.pug
@@ -32,10 +32,10 @@ block content
             //-       option(value="") Chưa chọn tỉnh
             .inner-item
               select(filter-status name="status")(style="font-size:13px")
-                option(value="") Mức ảnh hưởng (%) 
-                option(value="50") 50% 
-                option(value="75") 75%
-                option(value="100") 100%
+                option(value="") Độ ảnh hưởng  
+                option(value="50") Trung Bình 
+                option(value="75") Nặng
+                option(value="100") Rất nặng
             
         // Bộ lọc (filter)
         //- .filter
