--- a/views/admin/pages/about-create.pug
+++ b/views/admin/pages/about-create.pug
@@ -18,4 +18,4 @@ block main
         .inner-button.inner-two-col
           button Tạo mới
       .inner-back
-        a(href=``) Quay lại danh sách
+        a(href=`/${pathAdmin}/about/list`) Quay lại danh sách
