--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -32,8 +32,8 @@ block main
           option(value="50") 50
           option(value="75") 75
           option(value="100") 100
-      .inner-item.inner-reset
-        <i class="fa-solid fa-rotate-left" filter-reset></i> Xóa bộ lọc
+      .inner-item.inner-reset(filter-reset)
+        <i class="fa-solid fa-rotate-left" ></i> Xóa bộ lọc
   //- End Section 4
 
   //- Section 5
