--- a/views/admin/pages/dulieuSRT-list.pug
+++ b/views/admin/pages/dulieuSRT-list.pug
@@ -164,4 +164,4 @@ block main
         - const pageNum = val + 1;
         option(value=pageNum selected=(pageNum === pagination.page)) Trang #{pageNum}
 
-    //-End Section 7
+    //-End Section 7fi
